ADD. RC 탱크 프로젝트 초기화 및 기능 추가: 게임패드 연결, 트랙 및 터렛 제어, 포신 발사 기능 구현. README.md 파일 추가 및 라이브러리 의존성 설정.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,8 @@ framework = arduino
 ; but with package.json's "name" field renamed back to framework-arduinoespressif32
 platform_packages =
    framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
+
+lib_deps =
+    DFPlayerMini_Fast
+    Adafruit PWM Servo Driver Library
+    EEPROM
