--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ framework = arduino
 ; but with package.json's "name" field renamed back to framework-arduinoespressif32
 platform_packages =
    framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
-
+monitor_speed = 115200
 lib_deps =
     DFPlayerMini_Fast
     ESP32Servo
