UPDATE. 모니터링 설정 변경

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ framework = arduino
 platform_packages =
    framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
 monitor_speed = 115200
+monitor_filters = time, esp32_exception_decoder
 lib_deps =
     DFPlayerMini_Fast
     ESP32Servo
