UPDATE. ESP_LOG를 사용하여 디버깅 정보를 개선하고, 빌드 플래그를 추가하여 로그 레벨을 조정함.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,9 @@ platform_packages =
    framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
 monitor_speed = 115200
 monitor_filters = time, esp32_exception_decoder
+build_flags = 
+    -DCORE_DEBUG_LEVEL=5
+    -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=1
 lib_deps =
     DFPlayerMini_Fast
     ESP32Servo
