CHANGE. platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env]
 platform = espressif32@6.10.0
 board = esp32dev
 framework = arduino
 ; reupload of https://github.com/ricardoquesada/esp32-arduino-lib-builder/releases/download/4.1.0/esp32-bluepad32-4.1.0.zip
 ; but with package.json's "name" field renamed back to framework-arduinoespressif32
 platform_packages =
-   framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
+    framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
 monitor_speed = 115200
 monitor_filters = time, esp32_exception_decoder
-build_flags =
-    -DCORE_DEBUG_LEVEL=4
-    -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=1
 lib_deps =
     DFPlayerMini_Fast
     ESP32Servo
     EEPROM
+
+[env:develop]
+build_flags =
+    -DCORE_DEBUG_LEVEL=4
+    -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=4
+
+[env:release]
+build_flags =
+    -DCORE_DEBUG_LEVEL=1
+    -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=1
