ADD. 기기별 설정 처리

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,9 @@ build_flags =
 build_flags =
     -DCORE_DEBUG_LEVEL=1
     -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=1
+
+[env:bt30_C9_22_32_FF_62]
+build_flags =
+    -DMOTOR_DEAD_ZONE=70
+    -DCORE_DEBUG_LEVEL=4
+    -DCONFIG_LOG_DEFAULT_LEVEL_DEBUG=4
